--- a/CPIV/par_coords/parallel.css
+++ b/CPIV/par_coords/parallel.css
@@ -26,13 +26,13 @@ html, body {
   svg {
     font-family: Ubuntu, Tahoma, Helvetica, sans-serif;
   }
-  canvas, svg {
+  canvas {
     position: absolute;
     top: 0;
     left: 0;
     float: left;
   }
-  #chart {
+  #parCoords {
     position: relative;
     float: left;
   }
@@ -132,7 +132,7 @@ html, body {
   }
   #food-list {
     width: 100%;
-    height: 435px;
+    height: 350px;
     overflow-x: auto;
     overflow-y: auto;
     white-space: nowrap;
