--- a/CPIV/par_coords/style.css
+++ b/CPIV/par_coords/style.css
@@ -17,12 +17,6 @@ html, body {
   .dark a {
     color: #5ae;
   }
-  .list {
-    padding: 0 2%;
-    float: right;
-    width: 17%;
-    margin: 0 1%;
-  }
   svg {
     font-family: Ubuntu, Tahoma, Helvetica, sans-serif;
   }
@@ -35,6 +29,17 @@ html, body {
   #parCoords {
     position: relative;
     float: left;
+  }
+  .jitter_container {
+    position: relative;
+    left: 1.4%;
+    margin-right: 0.33%;
+    margin-top: 0.33%;
+    text-align: center;
+    float: center;
+    width: 30%;
+    background-color: #e8e8e89a;
+    border-radius: 30px 30px 30px 30px;
   }
   .brush rect.extent {
     fill: rgba(100,100,100,0.15);
@@ -82,13 +87,6 @@ html, body {
     cursor: move;
     padding-bottom: 24px;
   }
-  .dark .axis text {
-    fill: #f2f2f2;
-    text-shadow: 0 1px 0 #000, 1px 0 0 #000, 0 -1px 0 #000, -1px 0 0 #000;
-  }
-  .dark .axis text.label {
-    fill: #ddd;
-  }
   .quarter {
     width: 23%;
     margin: 0 1%;
@@ -130,18 +128,6 @@ html, body {
   button#exclude-data:hover {
     color: #900;
   }
-  #food-list {
-    width: 100%;
-    height: 350px;
-    overflow-x: auto;
-    overflow-y: auto;
-    white-space: nowrap;
-  }
-  #legend {
-    text-align: left;
-    overflow-y: auto;
-    border-left: 1px solid rgba(140,140,140,0.5);
-  }
   .row {
     cursor: pointer;
   }
@@ -151,12 +137,6 @@ html, body {
   }
   .off {
     color: #999;
-  }
-  .dark .off {
-    color: #555;
-  }
-  .dark #legend {
-    border-left: 1px solid #777;
   }
   .color-block, .color-bar {
     display: inline-block;
@@ -194,19 +174,21 @@ html, body {
     padding: 6px 24px 4px;
     line-height: 24px;
   }
-  .dark #header {
-    background: #040404;
-    color: #f3f3f3;
-  }
   #header h1 {
     display: inline-block;
     margin: 0px 14px 0 0;
+  }
+  #header h2 {
+    display: inline-block;
+    margin: 0px 14px 0 0;
+    font-size: 18px;
+    font-weight: normal;
   }
   #header button {
     vertical-align: top;
   }
   .controls {
-    float: right;
+    float: left;
     height: 24px;
     line-height: 24px;
   }
